# fr

./: .gitignore  .travis.yml  BUGS  CHANGES  COPYING  PackageInfo.g  README  README.fr  README.md  TODO  amen.C  aumasson.g  binary-gp-on-the-bs  configure  directproduct.g  gomega.g  growth.g  init.g  libtool  liealgebraforgetfulfunctor.g  makedoc.g  neumann.g  read.g  slava-3state  wreath-test.g
.github/workflows/: CI.yml
_data/: package.yml
aleshin/: Makefile  aleshin-new.g  aleshin.data
babyaleshin/: kassabov.g
cnf/: Makefile.in  aclocal.m4  configure.ac  files.g.in
cnf/autom4te.cache/: output.0  traces.0
cnf/m4/: ac_check_levmar.m4  ac_find_gap.m4
doc/: .gitignore  PackageInfo.g  chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap1.html  chap10.html  chap10.txt  chap10_mj.html  chap11.html  chap11.html-e  chap11.txt  chap11_mj.html  chap12.html  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chap6.html  chap6.txt  chap6_mj.html  chap7.html  chap7.txt  chap7_mj.html  chap8.html  chap8.txt  chap8_mj.html  chap9.html  chap9.txt  chap9_mj.html  (+10 more)
gap/: algebra.gd  algebra.gi  bisets.gd  bisets.gi  branch.g  complex.gd  complex.gi  cp.gd  cp.gi  cp_branch.g  cp_branch.gd  cp_grig.g  examples.g  examples.gd  examples.gi  frelement.gd  frelement.gi  frmachine.gd  frmachine.gi  group.gd  group.gi  helpers.gd  helpers.gi  img.gd  img.gi  linear-gbnp.gi  linear.gi  mealy.gd  mealy.gi  p1.gd  p1.gi  p1_ieee754.gi  perlist.gd  perlist.gi  pickle.g  spider.g  trans.gd  trans.gi  triangulations.g  vector.gd  (+2 more)
grigorchuk/: CHARS  Makefile  a.out  erschler.g  future-S.g  grig-presn.g  grigorchuk.g  grigrowth.mws  lattice.g  maxlen  normalsubgroups.g  ns-finite.g  ns.data  out.c  rw.g  s.g
grigorchuk/a.out.dSYM/Contents/Resources/DWARF/: a.out
grigorchuk/growth/: Makefile  diameter.C  diameter.C~  growth-final  jennings-growth.g  old-diameter.C
grigorchuk/growth/lz4-read-only/.svn/: all-wcprops  entries
grigorchuk/growth/lz4-read-only/cmake/.svn/: entries
grigorchuk/incompressible/: a.out  incompress.C  w20  w30  w40  w45  w50  w60
grigorchuk/lie/: grig-lie.g  liealg-growth.g
grigorchuk/thinned/: gr.g
guest/: Brieussels_algorithm.g
guptasidki/: guess-gs-expgrowth.g  guptasidki4
guptasidki/gs/: 12in20  a.out  incompress.C  incompress.C~  incompress320  incompress350
hurwitz/: .gitignore  Makefile  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  hsolve.C  hurwitz.g  layout.C  layout.m  lift.g
sandbox/: SimplifyLPresentation.g  compress.g  debug.g  grig-cohomology.g  incompress.C  motherg.g  parallel.g  ratt.g  wreath.g
sandbox/aleshin/: aleshin-matlab.g  aleshin.f  aleshin.g  aleshin.m  aleshin.magma  aleshin.sh  aleshinpres.g  homo.g  matlab.mat  xxx
sandbox/grigorchuk/: GrigorchukGroup.magma  T.g  cclass6-counts  diam.g  finite-S-2.g  finite-S.g  gg  grig.C  grigorchuk-nf.C  guess-gaut.g  infinite-S.g  liealg.g  ss.g  universal.g
sandbox/guptasidki/: fast-gs.C  gupta4-diam  guptasidki-incompress.g
sandbox/spectrum/: code.g  data  f12face  f12fafe  par.c  par.s  spectrum.c  spectrum.g  test.c
spectrum/: Makefile  a.out  code.c  f12face.c  f12face.d  f12fafe.f  sparse.c  spec.g
src/: cpoly.C  findrat.c  fr_dll.c  fr_dll.h  javaplot.java  p1.c
tst/: chapter-12.tst  chapter-3.tst  chapter-4.tst  chapter-5-a.tst  chapter-5-b.tst  chapter-9-a.tst  chapter-9-b.tst  cp.tst  frelements.g  frmachines.g  groups.g  kneading.g  mealyelements.g  mealymachines.g  p1.tst  testall.g
